GNOME Bugzilla – Bug 711115
Format item for volumes disappeared
Last modified: 2013-11-18 23:16:06 UTC
Trying to reproduce some problem with the Format... menuitem on usb sticks in the sidebar, I found that the menuitem is gone in 3.10 - it turns out GtkPlacesSidebar gives both a selected_item and a selected_volume in some cases, therefore the conditions need to be checked in two independent ifs instead of the current if ... else if ...
Created attachment 258511 [details] [review] Format item for volumes disappeared