Format item for volumes disappeared

Trying to reproduce some problem with the Format... menuitem
on usb sticks in the sidebar, I found that the menuitem is gone
in 3.10 - it turns out GtkPlacesSidebar gives both a selected_item
and a selected_volume in some cases, therefore the conditions
need to be checked in two independent ifs instead of the current
if ... else if ...

https://bugzilla.gnome.org/show_bug.cgi?id=711115